fixed email icon (wrong width) and arrow icon (mobile not seing emoji of arrow forward) problems on small screens

--- a/styles/style_mobile.css
+++ b/styles/style_mobile.css
@@ -125,7 +125,7 @@
 
     .contact-nav {
         height: 40px;
-        width: 40px;
+        width: 40px !important;
         padding: 0 5px;
         background-size: contain;
     }
